# ferries-malta

./: Cargo.toml  README.md
src/: lib.rs  main.rs  scraper.rs
src/config/: bot.rs
src/scraper/: ferry.rs
